# magnificence-2-chess

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
Doxygen/html/: BitBoard_8cpp.html  BitBoard_8cpp__incl.map  BitBoard_8cpp__incl.md5  BitBoard_8h.html  BitBoard_8h__dep__incl.map  BitBoard_8h__dep__incl.md5  BitBoard_8h__incl.map  BitBoard_8h__incl.md5  BitBoard_8h_source.html  BoardConversions_8h.html  BoardConversions_8h__dep__incl.map  BoardConversions_8h__dep__incl.md5  BoardConversions_8h__incl.map  BoardConversions_8h__incl.md5  BoardConversions_8h_source.html  CommandEngine_8h.html  CommandEngine_8h__dep__incl.map  CommandEngine_8h__dep__incl.md5  CommandEngine_8h__incl.map  CommandEngine_8h__incl.md5  CommandEngine_8h_source.html  EngineAB_8h.html  EngineAB_8h__dep__incl.map  EngineAB_8h__dep__incl.md5  EngineAB_8h__incl.map  EngineAB_8h__incl.md5  EngineAB_8h_source.html  Engine_8h.html  Engine_8h__dep__incl.map  Engine_8h__dep__incl.md5  Engine_8h__incl.map  Engine_8h__incl.md5  Engine_8h_source.html  Interface_8h.html  Interface_8h__dep__incl.map  Interface_8h__dep__incl.md5  Interface_8h__incl.map  Interface_8h__incl.md5  Interface_8h_source.html  Main_8cpp.html  (+100 more)
Doxygen/latex/: BitBoard_8cpp.tex  BitBoard_8cpp__incl.md5  BitBoard_8h.tex  BitBoard_8h__dep__incl.md5  BitBoard_8h__incl.md5  BoardConversions_8h.tex  BoardConversions_8h__dep__incl.md5  BoardConversions_8h__incl.md5  CommandEngine_8h.tex  CommandEngine_8h__dep__incl.md5  CommandEngine_8h__incl.md5  EngineAB_8h.tex  EngineAB_8h__dep__incl.md5  EngineAB_8h__incl.md5  Engine_8h.tex  Engine_8h__dep__incl.md5  Engine_8h__incl.md5  Interface_8h.tex  Interface_8h__dep__incl.md5  Interface_8h__incl.md5  Main_8cpp.tex  Main_8cpp__incl.md5  StringHelpers_8h.tex  StringHelpers_8h__dep__incl.md5  StringHelpers_8h__incl.md5  annotated.tex  classBitBoard.tex  classBoardConversions.tex  classCommandEngine.tex  classEngine.tex  classEngineAB.tex  classEngineAB__coll__graph.md5  classEngineAB__inherit__graph.md5  classEngineAlphaBeta.tex  classEngineAlphaBeta__coll__graph.md5  classEngineAlphaBeta__inherit__graph.md5  classEngine__coll__graph.md5  classEngine__inherit__graph.md5  classInterface.tex  classInterface__coll__graph.md5  (+15 more)
release/: CMakeCache.txt  Makefile  cmake_install.cmake  magnificence-2-chess
src/: BitBoard.h  CommandEngine.cpp  CommandEngine.h  Interface.cpp  Interface.h  Main.cpp  settings.h  tests_bitboard.h
src/Board/: BitBoard.cpp  BitBoard.h  Move.h  tests_bitboard.h  type_definitions.h
src/Engine/: Engine.h  EngineAB.cpp  EngineAB.h  EngineMCT.cpp  EngineMCT.h  MCTNode.h
src/Interface/: BoardConversions.cpp  BoardConversions.h  (+6 more)
(+34 files in other folders)
